Add hover effects for site buttons

--- a/02_week/styles.css
+++ b/02_week/styles.css
@@ -29,6 +29,7 @@ body {
     font-family: "Montserrat", sans-serif;
     margin:auto,0,auto,0;
 }
+/* Butoanele au fost stilizate cu ajutorul site-ului bestcssbuttongenerator.com , pentru un aspect exterior mai bun :)  */
 #contact-button {
     display: inline-block;
     position: absolute;
@@ -47,7 +48,10 @@ body {
 	padding:8px 30px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
-    
+}
+#contact-button:hover{
+    background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+	background-color:#378de5;
 }
 #home-button { 
     display: inline-block;
@@ -67,6 +71,10 @@ body {
 	padding:8px 30px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
+}
+#home-button:hover{
+    background:linear-gradient(to bottom, #FFBFA0 5%, #CA3C25 100%);
+	background-color:#FFBFA0;
 }
 #contact-title {
     position: relative;
@@ -95,4 +103,8 @@ body {
 	padding:9px 36px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #854629;
+}
+#submit-button:hover{
+    background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
+	background-color:#bc3315;
 }
