--- a/02_week/styles.css
+++ b/02_week/styles.css
@@ -5,6 +5,12 @@
 body {
     background-color:#e9d8a6 ;
 }
+h1 {
+    font-size:1.5rem;
+}
+a {
+    text-decoration:none;
+}
 .page-header { 
     background-color: #005f73;
     width:100%;
@@ -17,6 +23,17 @@ body {
     position: absolute;
     height:120px;
     bottom:0;
+}
+.post {
+    display:inline-block;
+    width:300px;
+    height:200px;
+    margin:40px 20px 40px 20px;
+}
+.post-image { 
+    display:inline-block;
+    width:100%;
+    height:100%;
 }
 #logo {
     text-align: left;
@@ -46,7 +63,6 @@ body {
 	font-size:15px;
 	font-weight:bold;
 	padding:8px 30px;
-	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
 #contact-button:hover{
@@ -69,7 +85,6 @@ body {
 	font-size:15px;
 	font-weight:bold;
 	padding:8px 30px;
-	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
 #home-button:hover{
@@ -101,7 +116,6 @@ body {
 	font-size:13px;
 	font-weight:bold;
 	padding:9px 36px;
-	text-decoration:none;
 	text-shadow:0px 1px 0px #854629;
 }
 #submit-button:hover{
