--- a/02_week/styles.css
+++ b/02_week/styles.css
@@ -35,6 +35,25 @@ a {
     width:100%;
     height:100%;
 }
+.post-page {
+width:100%;
+height:600px;
+}
+.post-page-image {
+    width:50%;
+    height:auto;
+    margin:30px 20px 30px 50px;
+    display:inline-block;
+    float:left;
+}
+.post-content {
+    margin-top: 30px;
+    font-weight: bold;
+}
+.post-title {
+    display:inline-block;
+    margin-top: 30px;
+}
 #logo {
     text-align: left;
     font-size: 4rem;
