Modify styling , add goTop button

--- a/05_week/styles.css
+++ b/05_week/styles.css
@@ -1,25 +1,115 @@
 body,html { 
     height: 100%;
 }
+h1 { 
+    font-size: 1.25rem;
+    display: inline-block;
+    margin-left: 20px;
+    position: relative;
+    bottom: 30px;
+}
+p {
+    font-size: 1rem;
+    margin: 0 0 12px 12px;
+}
 body { 
     margin: 0;
     box-sizing: border-box;
 }
 img {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    display: inline-block;
+}
+#goTopButton {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    background:#e62739;
+    box-shadow: 0 0 10px rgba(0,0,0,0.25);
+    color: #ffffff;
+    outline: none;
+    cursor: pointer;
+    border: none;
+}
+#goTopButton {
+background-color: #cc2333;
+}
+.header { 
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
 }
 .container {
     flex-direction: column;
     display: flex;
-    margin: 50px auto;
+    margin: 20px auto;
     align-items: center;
+    width: 90%;
+}
+.comment-element { 
+    width: 100%;
+    margin: 10px 0;
+}
+.delete-button {
+	box-shadow:inset 0px 1px 0px 0px #cf866c;
+	background:linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
+	background-color:#d0451b;
+	border-radius:3px;
+	border:1px solid #942911;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:13px;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #854629;
+}
+.delete-button:hover {
+	background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
+	background-color:#bc3315;
+}
+.delete-button:active {
+	position:relative;
+	top:1px;
+}
+#comment-input { 
+    flex-grow: 12;
+    border-radius: 3%;
+}
+#submit-button {
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:1rem;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
+    flex-grow: 1;
+    text-align: center;
+    margin-left: 20px;
+}
+#submit-button:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	background-color:#408c99;
+}
+#submit-button:active {
+	position:relative;
+	top:1px;
 }
 #comments { 
     display: flex;
     height: auto;
-    max-width: 500px;
+    width: 100%;
     flex-direction: column;
     align-items: center;
 }
@@ -27,5 +117,15 @@ img {
 @media (min-width: 764px) {
     .container {
        width: 800px; 
+       margin: 50px auto;
+    }
+    h1 { 
+        font-size: 1.5rem;
+    }
+    #submit-button { 
+        margin-left: 40px;
+    }
+    #comment-input { 
+        margin-left: 40px;
     }
 }
