--- a/05_week/styles.css
+++ b/05_week/styles.css
@@ -10,17 +10,19 @@ h1 {
 }
 p {
     font-size: 1rem;
-    margin: 0 0 12px 12px;
+    margin: 0 12px 12px 12px;
 }
 body { 
     margin: 0;
     box-sizing: border-box;
+    background-color: #f8edeb;
 }
 img {
     width: 75px;
     height: 75px;
     border-radius: 50%;
     display: inline-block;
+    margin: 20px 0 0 12px;
 }
 #goTopButton {
     position: fixed;
@@ -39,20 +41,25 @@ img {
 #goTopButton {
 background-color: #cc2333;
 }
-.header { 
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 30px;
-}
 .container {
     flex-direction: column;
     display: flex;
     margin: 20px auto;
     align-items: center;
     width: 90%;
+    background-color: white;
+    border-radius: 2%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.header { 
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
+
 .comment-element { 
     width: 100%;
     margin: 10px 0;
@@ -69,6 +76,7 @@ background-color: #cc2333;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #854629;
+    margin-left: 12px;
 }
 .delete-button:hover {
 	background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
@@ -81,26 +89,27 @@ background-color: #cc2333;
 #comment-input { 
     flex-grow: 12;
     border-radius: 3%;
+    margin-left: 20px;
+    height: 40px;
 }
 #submit-button {
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	background-color:#599bb3;
+	background:linear-gradient(to bottom, #9649CB 5%, #7F0799 100%);
+	background-color:#9649CB;
 	border-radius:8px;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-size:1rem;
 	font-weight:bold;
-	padding:13px 32px;
+	padding:6.5px 16px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #3d768a;
+	text-shadow:0px 1px 0px #9649CB;
     flex-grow: 1;
     text-align: center;
-    margin-left: 20px;
+    margin: 0 20px 0 20px;
 }
 #submit-button:hover {
-	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-	background-color:#408c99;
+	background:linear-gradient(to bottom, #7F0799 5%, #7F0799 100%);
 }
 #submit-button:active {
 	position:relative;
@@ -122,10 +131,20 @@ background-color: #cc2333;
     h1 { 
         font-size: 1.5rem;
     }
+    p {
+    margin: 0 20px 12px 20px;
+    }
+    img {
+        margin-left: 20px;
+    }
     #submit-button { 
-        margin-left: 40px;
+        margin: 10px 40px 0 40px ;
+        padding:13px 32px;
     }
     #comment-input { 
-        margin-left: 40px;
+        margin: 10px 0 0 40px;
+    }
+    .delete-button { 
+        margin-left:20px;
     }
 }
