--- a/05_week_optional/styles.css
+++ b/05_week_optional/styles.css
@@ -29,7 +29,9 @@ img {
     padding: 10px;
     margin: 5px;
 }
-
+.hidden {
+    display: none !important;
+}
 #bmi-view { 
     display: flex;
     flex-direction: column;
