--- a/06_week/styles.css
+++ b/06_week/styles.css
@@ -5,15 +5,20 @@ body {
     box-sizing: border-box;
     margin: 0;
 }
-.game-container {
-    width: 1000px;
-    height: 500px;
+#game-container {
+    width: 1005px;
+    height: 505px;
     margin: 10% auto;
     border: 1px solid black;
+    z-index: 0;
 }   
+.obstacle {
+    z-index: 1;
+}
 #player {
     width: 25px;
     height: 25px;
     background-color: rebeccapurple;
     position: relative;
+    z-index: 2;
 }
