--- a/06_week/styles.css
+++ b/06_week/styles.css
@@ -11,14 +11,20 @@ body {
     margin: 10% auto;
     border: 1px solid black;
     z-index: 0;
+    position: relative;
 }   
 .obstacle {
     z-index: 1;
+    background-color: red;
+    position: absolute;
+}
+.hidden {
+    display: none !important;
 }
 #player {
     width: 25px;
     height: 25px;
     background-color: rebeccapurple;
-    position: relative;
+    position: absolute;
     z-index: 2;
 }
