--- a/06_week/styles.css
+++ b/06_week/styles.css
@@ -4,6 +4,8 @@ body,html {
 body {
     box-sizing: border-box;
     margin: 0;
+    background-color: #388697;
+    z-index:2;
 }
 #game-container {
     width: 1005px;
@@ -12,11 +14,15 @@ body {
     border: 1px solid black;
     z-index: 0;
     position: relative;
+    background-color: #B5FFE1;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    z-index:0;
 }   
 .obstacle {
     z-index: 1;
-    background-color: red;
+    background-image: url('brick.jpg');
     position: absolute;
+    background-size: cover;
 }
 .hidden {
     display: none !important;
@@ -24,7 +30,7 @@ body {
 #player {
     width: 25px;
     height: 25px;
-    background-color: rebeccapurple;
+    background-image: url('player.png');
     position: absolute;
     z-index: 2;
 }
