--- a/06_week/styles.css
+++ b/06_week/styles.css
@@ -44,3 +44,39 @@ h1 {
   position: absolute;
   z-index: 2;
 }
+#player-stat { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  color: red;
+  margin-top: 25px;
+}
+.fa-heart { 
+  margin: 0 8px;
+}
+#restart-button { 
+  box-shadow:inset 0px 1px 0px 0px #f5978e;
+	background:linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+	background-color:#f24537;
+	border-radius:6px;
+	border:1px solid #d02718;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+  margin-left: 100px;
+}
+#restart-button :hover {
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
+	background-color:#c62d1f;
+}
+#restart-button :active {
+	position:relative;
+	top:1px;
+}
