--- a/07_week/styles.css
+++ b/07_week/styles.css
@@ -29,6 +29,12 @@ span {
 .timer-buttons{
     margin-top: 35px;
 }
+.timer {
+    background-color: #ade8f4;
+    width: 33%;
+    display: inline-block;
+    text-align: center;
+}
 #start-button { 
 	background-color:#44c767;
 	border-radius:28px;
