--- a/07_week/styles.css
+++ b/07_week/styles.css
@@ -1,39 +1,156 @@
-body,
-html {
-  height: 100%;
+* {
+	margin:0;
+	padding:0;
+	box-sizing: border-box;
 }
-body {
-  box-sizing: border-box;
-  margin: 0;
-  background-color: #0096c7;
-}
-button{
-    display: inline-block;
-    margin: 0 5px;
+section {
+	display: flex;
+	justify-content: center;
+	min-height: 100vh;
+	background: #121212;
+	flex-wrap: wrap;
 }
 span {
     font-size: 5rem;
 }
-.container {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-    margin: 60px auto;
-    padding: 75px;
-    background-color: #ade8f4;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.timer-buttons{
-    margin-top: 35px;
+button { 
+	margin: 0 10px;
 }
 .timer {
-    background-color: #ade8f4;
-    width: 33%;
     display: inline-block;
     text-align: center;
+	flex-basis: 100%;
+	color: #f1faee;
+	height: 100px;
+}
+.timer-buttons{
+    height: 40px;
+	flex-basis: 100%;
+	text-align: center;
+}
+.saved-timer { 
+	flex-basis: 25%;
+    text-align: center;
+}
+.saved-timer span { 
+	font-size: 1.5rem;
+	color: white;
+}
+.bowl { 
+	position: relative;
+	width: 300px;
+	height: 300px;
+	background: rgba(255,255,255,0.1);
+	border-radius: 50%;
+	border: 8px solid transparent;
+	transform-origin: bottom center;
+	animation: animate 5s linear infinite;
+	margin-top: 50px;
+}
+
+@keyframes animate {
+	0%
+	{
+		filter: hue-rotate(0deg);
+		transform: rotate(0deg);
+	}
+	25%
+	{
+		transform: rotate(15deg);
+	}
+	50%
+	{
+		transform: rotate(0deg);
+	}
+	75%
+	{
+		transform: rotate(-15deg);
+	}
+	100%
+	{
+		filter: hue-rotate(360deg);
+		transform: rotate(0deg);
+	}
+}
+.bowl::before{
+	content: '' ;
+	position: absolute;
+	top: -15px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 40%;
+	height: 30px;
+	border: 15px solid #444;
+	border-radius: 50%;
+	box-shadow: 0 10px #222;
+}
+
+.bowl::after {
+	content: '';
+	position: absolute;
+	top: 40%;
+	left:50%;
+	transform: translate(-50%,-50%);
+	border-radius: 50%;
+	width: 150px;
+	height: 80px;
+	background: rgba(255,255,255,0.05);;
+}
+
+.liquid { 
+	position: absolute;
+	top:50%;
+	left: 5px;
+	right:5px;
+	bottom:5px;
+	background: #41c1fb;
+	border-bottom-left-radius:150px;
+	border-bottom-right-radius:150px;
+	filter: drop-shadow(0 0 80px #41c1fb);
+	transform-origin: top center;
+	animation: animateLiquid 5s linear infinite;
+}
+@keyframes animateLiquid {
+	0%
+	{
+		transform: rotate(0deg);
+	}
+	25%
+	{
+		transform: rotate(-20deg);
+	}
+	50%
+	{
+		transform: rotate(0deg);
+	}
+	75%
+	{
+		transform: rotate(20deg);
+	}
+	100%
+	{
+		transform: rotate(0deg);
+	}
+}
+.liquid::before {
+	content: '';
+	position: absolute;
+	top:-10px;
+	width: 100%;
+	height: 20px ;
+	background: #1fa4e0;
+	border-radius: 50%;
+	filter: drop-shadow(0 0 80px #41c1fb);
+}
+.shadow { 
+	position: absolute;
+	top: calc(27% + 150px);
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 300px;
+	height: 30px;
+	background: rgba(0,0,0,0.5);
+	border-radius: 50%;
 }
 #start-button { 
 	background-color:#44c767;
