--- a/11_week/styles.css
+++ b/11_week/styles.css
@@ -8,6 +8,13 @@ body {
   background-color: #011f3f;
   z-index: 2;
 }
+h1 {
+    text-align: center;
+    margin-top: 30px;
+    font-family: "Press Start 2P", cursive;
+    font-size: 2rem;
+    color: #fef2bf;
+  }
 #game-container {
     width: 1005px;
     height: 505px;
@@ -26,4 +33,43 @@ body {
     width: 40px;
     height: 40px;
     position: absolute;
+  }
+  .hidden {
+    display: none !important;
+  }
+  #player-stat {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    color: red;
+    margin-top: 25px;
+  }
+  .fa-heart {
+    margin: 0 8px;
+  }
+  #restart-button {
+    box-shadow: inset 0px 1px 0px 0px #f5978e;
+    background: linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+    background-color: #f24537;
+    border-radius: 6px;
+    border: 1px solid #d02718;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #810e05;
+    margin-left: 100px;
+  }
+  #restart-button :hover {
+    background: linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
+    background-color: #c62d1f;
+  }
+  #restart-button :active {
+    position: relative;
+    top: 1px;
   }
