--- a/11_week/styles.css
+++ b/11_week/styles.css
@@ -9,67 +9,74 @@ body {
   z-index: 2;
 }
 h1 {
-    text-align: center;
-    margin-top: 30px;
-    font-family: "Press Start 2P", cursive;
-    font-size: 2rem;
-    color: #fef2bf;
-  }
+  text-align: center;
+  margin-top: 30px;
+  font-family: "Press Start 2P", cursive;
+  font-size: 2rem;
+  color: #fef2bf;
+}
 #game-container {
-    width: 1005px;
-    height: 505px;
-    border: 1px solid black;
-    margin: 5% auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    position: relative;
-  }
-  .player {
-    width: 25px;
-    height: 25px;
-    background-color: red;
-    position: absolute;
-  }
-  .monster {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-  }
-  .hidden {
-    display: none !important;
-  }
-  #player-stat {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    color: red;
-    margin-top: 25px;
-  }
-  .fa-heart {
-    margin: 0 8px;
-  }
-  #restart-button {
-    box-shadow: inset 0px 1px 0px 0px #f5978e;
-    background: linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
-    background-color: #f24537;
-    border-radius: 6px;
-    border: 1px solid #d02718;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 6px 24px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #810e05;
-    margin-left: 100px;
-  }
-  #restart-button :hover {
-    background: linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
-    background-color: #c62d1f;
-  }
-  #restart-button :active {
-    position: relative;
-    top: 1px;
-  }
+  width: 1005px;
+  height: 505px;
+  border: 5px solid #0090c1;
+  margin: 5% auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: relative;
+  background-color: #aef6c7;
+}
+#player {
+  width: 25px;
+  height: 25px;
+  background-image: url("player.png");
+  position: absolute;
+}
+.monster {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+}
+.hidden {
+  display: none !important;
+}
+.fa-heart {
+  margin: 0 8px;
+}
+.game-over {
+  color: red;
+  text-align: center;
+  margin: 200px;
+}
+#player-stat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  color: red;
+  margin-top: 25px;
+}
+
+#restart-button {
+  box-shadow: inset 0px 1px 0px 0px #f5978e;
+  background: linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+  background-color: #f24537;
+  border-radius: 6px;
+  border: 1px solid #d02718;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #810e05;
+  margin-left: 100px;
+}
+#restart-button :hover {
+  background: linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
+  background-color: #c62d1f;
+}
+#restart-button :active {
+  position: relative;
+  top: 1px;
+}
