Change dropdown menu font color

--- a/08_week_optional/styles.css
+++ b/08_week_optional/styles.css
@@ -49,6 +49,7 @@ label {
   margin-right: 20px;
   font-size: 1rem;
   background-color: #415a77;
+  color: white;
 }
 #select-button {
   background-color: #44c767;
