--- a/10_week_optional/styles.css
+++ b/10_week_optional/styles.css
@@ -24,6 +24,9 @@ header {
     padding: 10px;
     margin: 5px;
 }
+.hidden { 
+    display: none !important;
+}
 #display { 
     background-color: white;
     height: 150%;
@@ -66,3 +69,34 @@ header {
         position:relative;
         top:1px;
     }
+#restart-button { 
+        box-shadow:inset 0px 1px 0px 0px #cf866c;
+        background:linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
+        background-color:#d0451b;
+        border-radius:3px;
+        border:1px solid #942911;
+        display:inline-block;
+        cursor:pointer;
+        color:#ffffff;
+        font-family:Arial;
+        font-size:13px;
+        padding:6px 24px;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #854629;
+    }
+    #restart-button:hover {
+        background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
+        background-color:#bc3315;
+    }
+    #restart-button:active {
+        position:relative;
+        top:1px;
+    }
+#game-over {
+    color: red;
+    margin-top: 150px;
+}
+#game-win {
+    color: #2a9d8f;
+    margin-top: 150px;
+}
